LPS-65147 After LPS-64502 dockbar is wrapped by portlet-borderless-container css class. Remove padding added by that css so appearance stays the same as before the mentioned issue

--- a/portal-web/docroot/html/themes/_styled/css/extras.css
+++ b/portal-web/docroot/html/themes/_styled/css/extras.css
@@ -492,3 +492,11 @@ body:first-of-type {
 		}
 	}
 }
+
+.portlet-dockbar {
+	.portlet-borderless-container {
+		min-height: 0;
+		padding: 0;
+		margin-bottom: 0;
+	}
+}
